--- a/home/.atom/styles.less
+++ b/home/.atom/styles.less
@@ -1,5 +1,25 @@
+@color: rgba(255, 255, 255, 0.1);
+
 .editor {
   .invisible-character {
-    opacity: 0.1;
-  }
+		color: transparent;
+
+		.source & {
+			color: @color;
+
+			&.hard-tab {
+				position: relative;
+				color: transparent;
+
+				&:before {
+					position: absolute;
+					top: 50%;
+					left: 1px;
+					right: 1px;
+					content: "";
+					border-bottom: 1px solid @color;
+				}
+			}
+		}
+	}
 }
